--- a/src/main/resources/public/templates/login.html
+++ b/src/main/resources/public/templates/login.html
@@ -1,11 +1,33 @@
-<head>
-</head>
+<div>
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4">
+			<h1>Sign in</h1>
 
-<body>
-	<label for="userName">User: </label>
-	<input id="userName" type="text" />
-	<label for="passWord">Password: </label>
-	<input id="passWord" type="text" />
-	<button>Login</button>
-	<button>Register</button>
-</body>
+			<div class="alert alert-danger" ng-show="authenticationError">
+				<strong>Failed to sign in!</strong> Please check your credentials and try again.
+			</div>
+		</div>
+		<div class="col-md-4 col-md-offset-4">
+			<form class="form" role="form" ng-submit="login($event)">
+				<div class="form-group">
+					<label for="username">Login</label>
+					<input type="text" class="form-control" id="username" placeholder="Your username" ng-model="username">
+				</div>
+				<div class="form-group">
+					<label for="password">Password</label>
+					<input type="password" class="form-control" id="password" placeholder="Your password"
+						   ng-model="password">
+				</div>
+
+				<button type="submit" class="btn btn-primary">Sign in</button>
+			</form>
+			<p></p>
+			<div class="alert alert-warning">
+				<a class="alert-link" >Did you forget your password?</a>
+			</div>
+			<div class="alert alert-warning">
+				You don't have an account yet? <a class="alert-link" href="#/register">Register a new account</a>
+			</div>
+		</div>
+	</div>
+</div>
