added request body, modularized auth factory, updated logincontroller, added requestmappings to security webservice that should revert to login

--- a/src/main/resources/public/templates/login.html
+++ b/src/main/resources/public/templates/login.html
@@ -8,7 +8,7 @@
 			</div>
 		</div>
 		<div class="col-md-4 col-md-offset-4">
-			<form class="form" role="form" ng-submit="login($event)">
+			<form class="form" role="form" ng-submit="login()">
 				<div class="form-group">
 					<label for="username">Login</label>
 					<input type="text" class="form-control" id="username" placeholder="Your username" ng-model="credentials.username">
