working on creating a report front end

--- a/src/main/resources/public/templates/createReport.html
+++ b/src/main/resources/public/templates/createReport.html
@@ -3,7 +3,17 @@
 	<input id="reportName" type="text"/>
 </div>
 <div>
-	<p></p>
+	<select>
+		<option>Mileage</option>
+		<option>Per Diem</option>
+		<option>Lodging</option>
+		<option>Travel</option>
+		<option>Meals</option>
+		<option>Entertainment</option>
+		<option>Parking</option>
+		<option>other</option>
+	</select>
+	<span>$<input type="text"/></span>
 </div>
 <div>
 	<button>Add Line Item</button>
