--- a/src/main/resources/public/templates/createReport.html
+++ b/src/main/resources/public/templates/createReport.html
@@ -1,20 +1,64 @@
 <div>
 	<label for="reportName">Report Name: </label>
-	<input id="reportName" type="text"/>
+	<input id="reportName" name="reportName" type="text"/>
 </div>
 <div>
-	<select>
-		<option>Mileage</option>
-		<option>Per Diem</option>
-		<option>Lodging</option>
-		<option>Travel</option>
-		<option>Meals</option>
-		<option>Entertainment</option>
-		<option>Parking</option>
-		<option>other</option>
-	</select>
-	<span>$<input type="text"/></span>
+	<label for="note">Note</label>
+	<textarea id="note" name="note" ng-model="note">
+	</textarea>
 </div>
+<form class="form-horizontal" role="form" ng-submit="addRow()">
+	<div class="form-group">
+		<label class="col-md-2 control-label">Type</label>
+		<div class="col-md-4">
+			<div>
+				<select ng-model="itemType"> -->
+ 					<option ng-value="1">Mileage</option>
+					<option ng-value="2">Per Diem</option>
+					<option ng-value="3">Lodging</option>
+					<option ng-value="4">Travel</option>
+					<option ng-value="5">Meals</option>
+					<option ng-value="6">Entertainment</option>
+					<option ng-value="7">Parking</option>
+					<option ng-value="8">Other</option>
+				</select>
+			</div>
+		</div>
+	</div>
+	<div class="form-group">
+		<label class="col-md-2 control-label">Cost</label>
+		<div class="col-md-4">
+			<input type="text" class="form-control" name="cost"
+				ng-model="cost"/>
+		</div>
+	</div>
+	<div class="form-group">
+		<div>
+			<input type="submit" value="Add Expense Item" class="btn btn-primary"/>
+		</div>
+	</div>
+</form>
 <div>
-	<button>Add Line Item</button>
+	<table class="table">
+		<tr>
+			<th>
+				Type
+			</th>
+			<th>
+				Cost
+			</th>
+		</tr>
+		<tr ng-repeat="items in itemList">
+			<td>
+				{{typeDisplay(items.typeid)}}
+			</td>
+			<td>
+				{{items.value | currency}}
+			</td>
+			<td>
+				<a class="btn" ng-click="removeItem(items)">Remove</button>
+			</td>
+		</tr>
+	</table>
 </div>
+<button ng-click="sendReport()">Submit Report</button>
