--- a/src/main/resources/public/templates/createReport.html
+++ b/src/main/resources/public/templates/createReport.html
@@ -1,6 +1,6 @@
 <div>
 	<label for="reportName">Report Name: </label>
-	<input id="reportName" name="reportName" maxlength=255 type="text"/>
+	<input id="reportName" name="reportName" maxlength=255 type="text" required/>
 </div>
 <div>
 	<label for="note">Note: </label>
@@ -12,7 +12,7 @@
 		<label class="col-md-2 control-label">Type</label>
 		<div class="col-md-4">
 			<div>
-				<select ng-model="itemType"> -->
+				<select name="itemType" ng-model="itemType" required>
  					<option ng-value="1">Mileage</option>
 					<option ng-value="2">Per Diem</option>
 					<option ng-value="3">Lodging</option>
@@ -28,12 +28,12 @@
 	<div class="form-group">
 		<label class="col-md-2 control-label">Cost</label>
 		<div class="col-md-4">
-			<input type="number" class="form-control" name="cost"
-				ng-model="cost"/>
+			<input type="text" class="form-control" name="cost"
+				ng-model="cost" required/>
 		</div>
 	</div>
 	<div class="form-group">
-		<div>
+		<div class="col-md-2">
 			<input type="submit" value="Add Expense Item" class="btn btn-primary"/>
 		</div>
 	</div>
