--- a/src/main/resources/public/css/styling.css
+++ b/src/main/resources/public/css/styling.css
@@ -31,7 +31,7 @@
   z-index: 2;
 }
 .form-signin input[type="username"] {
-  margin-bottom: -1px;
+  margin-bottom: 10px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -39,4 +39,8 @@
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+#username {
+	background-color:green;
 }
