--- a/src/main/resources/public/templates/detailView.html
+++ b/src/main/resources/public/templates/detailView.html
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <td>Name:&nbsp;</td>
-    <td colspan="3"><input type="text" ng-model="reportToView.name" disabled></td>
+    <td colspan="3"><input type="text" ng-value="reportToView.name" disabled></td>
   </tr>
   <tr>
     <td>Notes:&nbsp;</td>
@@ -11,9 +11,9 @@
   </tr>
   <tr ng-repeat="lineItem in reportToView.lineItems">
     <td>Expense Type:&nbsp;</td>
-    <td><input type="text" ng-model="lineItem.type" disabled></td>
+    <td><input type="text" ng-value="lineItem.type.type" disabled></td>
     <td>Expense Amount:&nbsp;</td>
-    <td><input type="text" ng-model="lineItem.value | currency" disabled></td>
+    <td><input type="text" ng-value="lineItem.value | currency" disabled></td>
   </tr>
 </table>
 </div>
