--- a/src/main/resources/public/templates/createReport.html
+++ b/src/main/resources/public/templates/createReport.html
@@ -61,4 +61,4 @@
 		</tr>
 	</table>
 </div>
-<button ng-click="sendReport()">Submit Report</button>
+<button ng-show="itemList.length > 0" ng-click="sendReport()">Save Report</button>
