--- a/src/main/resources/public/templates/createReport.html
+++ b/src/main/resources/public/templates/createReport.html
@@ -50,7 +50,7 @@
 		</tr>
 		<tr ng-repeat="items in itemList">
 			<td>
-				{{typeDisplay(items.typeid)}}
+				{{typeDisplay(items.type.typeId)}}
 			</td>
 			<td>
 				{{items.value | currency}}
