fixed a lot of the front end things that were addressed after Sprint 1

--- a/src/main/resources/public/templates/createProject.html
+++ b/src/main/resources/public/templates/createProject.html
@@ -21,3 +21,5 @@
 	</ul>
 </div>
 <button ng-click=(sendProject())>Create Project</button>
+<p ng-show="worked">Project Created</p>
+<p ng-show="error">Project failed to create</p>
