--- a/src/main/resources/public/templates/createReport.html
+++ b/src/main/resources/public/templates/createReport.html
@@ -18,15 +18,15 @@
 		<label class="col-md-2 control-label">Type</label>
 		<div class="col-md-4">
 			<div>
-				<select ng-model="itemType"> -->
- 					<option ng-value="1">Mileage</option>
-					<option ng-value="2">Per Diem</option>
-					<option ng-value="3">Lodging</option>
-					<option ng-value="4">Travel</option>
-					<option ng-value="5">Meals</option>
-					<option ng-value="6">Entertainment</option>
-					<option ng-value="7">Parking</option>
-					<option ng-value="8">Other</option>
+				<select name="itemType" ng-model="itemType" ng-required>
+ 					<option value="1">Mileage</option>
+					<option value="2">Per Diem</option>
+					<option value="3">Lodging</option>
+					<option value="4">Travel</option>
+					<option value="5">Meals</option>
+					<option value="6">Entertainment</option>
+					<option value="7">Parking</option>
+					<option value="8">Other</option>
 				</select>
 			</div>
 		</div>
@@ -34,8 +34,8 @@
 	<div class="form-group">
 		<label class="col-md-2 control-label">Cost</label>
 		<div class="col-md-4">
-			<input type="text" class="form-control" name="cost"
-				ng-model="cost"/>
+			<input type="number" step="any" min="0.01" class="form-control" name="cost"
+				ng-model="cost" required/>
 		</div>
 	</div>
 	<div class="form-group">
@@ -68,3 +68,4 @@
 	</table>
 </div>
 <button ng-show="itemList.length > 0" ng-click="sendReport()">Save Report</button>
+<p ng-show="error">Report failed to create</p>
