--- a/src/main/resources/public/templates/createReport.html
+++ b/src/main/resources/public/templates/createReport.html
@@ -1,50 +1,44 @@
-<div>
-	<label for="projectName">Project Name: </label>
+
+<form class="form-horizontal" role="form" ng-submit="addRow()">
+<div class="form-group">
+	<label for="projectName" class="col-sm-2">Project Name: </label>
 	<select id="projectName" name="projectName">
-		<option ng-repeat="datum in data.data" ng-value="{{datum.projectId}}">{{datum.name}}</option>
+		<option ng-repeat="datum in projectList" ng-value="{{datum.projectId}}">{{datum.name}}</option>
 	</select>
 </div>
-<div>
-	<label for="reportName">Report Name: </label>
+<div class="form-group">
+	<label for="reportName" class="col-sm-2">Report Name: </label>
 	<input id="reportName" name="reportName" type="text"/>
 </div>
-<div>
-	<label for="note">Note</label>
+<div class="form-group">
+	<label for="note" class="col-sm-2">Note</label>
 	<textarea id="note" name="note" ng-model="note">
 	</textarea>
 </div>
-<form class="form-horizontal" role="form" ng-submit="addRow()">
-	<div class="form-group">
-		<label class="col-md-2 control-label">Type</label>
-		<div class="col-md-4">
-			<div>
-				<select name="itemType" ng-model="itemType" ng-required>
- 					<option value="1">Mileage</option>
-					<option value="2">Per Diem</option>
-					<option value="3">Lodging</option>
-					<option value="4">Travel</option>
-					<option value="5">Meals</option>
-					<option value="6">Entertainment</option>
-					<option value="7">Parking</option>
-					<option value="8">Other</option>
-				</select>
-			</div>
-		</div>
+<div class="form-group">
+	<label for="itemType" class="col-sm-2">Type: </label>
+	<select name="itemType" ng-model="itemType" ng-required>
+ 		<option value="1">Mileage</option>
+		<option value="2">Per Diem</option>
+		<option value="3">Lodging</option>
+		<option value="4">Travel</option>
+		<option value="5">Meals</option>
+		<option value="6">Entertainment</option>
+		<option value="7">Parking</option>
+		<option value="8">Other</option>
+	</select>
+</div>
+<div class="form-group">
+	<label for="cost" class="col-sm-2">Cost: </label>
+	<input type="number" step="any" min="0.01" name="cost" ng-model="cost" required/>
+</div>
+<div class="form-group">
+	<div>
+		<input type="submit" value="Add Expense Item" class="btn btn-primary"/>
 	</div>
-	<div class="form-group">
-		<label class="col-md-2 control-label">Cost</label>
-		<div class="col-md-4">
-			<input type="number" step="any" min="0.01" class="form-control" name="cost"
-				ng-model="cost" required/>
-		</div>
-	</div>
-	<div class="form-group">
-		<div>
-			<input type="submit" value="Add Expense Item" class="btn btn-primary"/>
-		</div>
-	</div>
-</form>
-<div>
+</div>
+
+<div ng-show="itemList.length > 0">
 	<table class="table">
 		<tr>
 			<th>
@@ -69,3 +63,4 @@
 </div>
 <button ng-show="itemList.length > 0" ng-click="sendReport()">Save Report</button>
 <p ng-show="error">Report failed to create</p>
+</form>
