--- a/src/main/resources/public/css/styling.css
+++ b/src/main/resources/public/css/styling.css
@@ -1,55 +1,10 @@
-form, #mainView {
-	
-	margin: 150px;
-}
-header {
-	background-color:green;
-	height: 15%;
-	position: absolute;
+
+.footer {
+	margin: 25px;
 }
 
-h1 {
-	padding: 25px;
-	margin-top: 0;
-.content {
-    margin-top: 7em;
+.form-group {
+	margin-left: 25px;
 }
-
-.container {
-    
-    color: green;
-}
-.form-signin {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
-}
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
-}
-.form-signin .checkbox {
-  font-weight: normal;
-}
-.form-signin .form-control {
-  position: relative;
-  height: auto;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 10px;
-  font-size: 16px;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="username"] {
-  margin-bottom: 10px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+td{	margin-left: 25px;
 }
