--- a/src/main/resources/public/css/styling.css
+++ b/src/main/resources/public/css/styling.css
@@ -1,10 +1,34 @@
-
 .footer {
-	margin: 25px;
+
+	width:100%;
+	height:25px;
+	position:absolute;
+	bottom:0;
+	left:0;
 }
 
 .form-group {
 	margin-left: 25px;
 }
 td{	margin-left: 25px;
+}
+
+label {
+	margin-left: 15px;
+}
+
+.btn-primary {
+	margin-left: 30px;
+}
+
+.container {
+	margin-bottom: 15px;
+}
+
+button {
+	margin-left: 15px;
+}
+
+.textLeft {
+	text-align: left !important;
 }
