--- a/src/main/resources/public/templates/createProject.html
+++ b/src/main/resources/public/templates/createProject.html
@@ -1,18 +1,18 @@
 <form class="form-horizontal">
 <div class="form-group">
-	<label for="projectName" class="col-sm-2 control-label text-">Project: </label>
+	<label for="projectName" class="col-sm-2 control-label textLeft">Project: </label>
 	<input id="projectName" name="projectName" type="text" required/>
 </div>
 <div class="form-group">
-	<label for="techLead" class="col-sm-2 control-label">Tech Lead: </label>
+	<label for="techLead" class="col-sm-2 control-label textLeft">Tech Lead: </label>
 	<select id="techLead" name="techLead">
 		<option ng-repeat="datum in data.data" ng-value="{{datum.userId}}">{{datum.firstname + " " + datum.lastname}}</option>
 	</select>
 </div>
 <div class="form-group">
-	<label for="developers" class="col-sm-2 control-label">Developers:</label>
+	<label for="developers" class="col-sm-2 control-label textLeft">Developers:</label>
 	<select id="developers" name="developers" ng-model="devList">
-		<option name="devi" ng-repeat="datus in data.data">{{datus.firstname + " " + datus.lastname}}</option>
+		<option name="dev" ng-repeat="datus in data.data">{{datus.firstname + " " + datus.lastname}}</option>
 	</select>
 	<span><button ng-click=(addDev(devList))>Add</button></span>
 	<table class="table">
@@ -24,6 +24,6 @@
 </form>
 
 
-<button ng-click=(sendProject()) class="center-block">Create Project</button>
+<button ng-click=(sendProject())>Create Project</button>
 <p ng-show="worked">Project Created</p>
 <p ng-show="error">Project failed to create</p>
