Added editreportcontroller that is currently the same as the createreportcontroller with the exception of put instead of post.  Will amend and adapt tomorrow following completion of edit template

--- a/src/main/resources/public/templates/detailView.html
+++ b/src/main/resources/public/templates/detailView.html
@@ -16,4 +16,9 @@
     <td><input type="text" ng-value="lineItem.value | currency" disabled></td>
   </tr>
 </table>
+<div class="form-group">
+	<div>
+		<input type="submit" value="Edit Report" type="btn btn-primary">
+	</div>
+</div>
 </div>
