Updates for detailView, minor functionality for potential future updates in home.

--- a/src/main/resources/public/templates/userHomeView.html
+++ b/src/main/resources/public/templates/userHomeView.html
@@ -4,5 +4,6 @@
 	<div ng-repeat="report in reportList">
  	 <a ng-click="loadView(report.reportId)">{{report.name}}</a>
 	</div>
+	<div ng-show="projectList.length > 0"></div>
 
 </div>
