Added editReport.html and fixed controller

--- a/src/main/resources/public/templates/detailView.html
+++ b/src/main/resources/public/templates/detailView.html
@@ -18,7 +18,7 @@
 </table>
 <div class="form-group">
 	<div>
-		<input type="submit" value="Edit Report" type="btn btn-primary">
+		<input type="submit" value="Edit Report" type="btn btn-primary" ui-sref="editReport">
 	</div>
 </div>
 </div>
