--- a/src/main/resources/public/Login/templates/login.html
+++ b/src/main/resources/public/Login/templates/login.html
@@ -4,9 +4,9 @@
 <body ng-app ="loginApp">
 <form id="loginPage" name="loginPage" ng-submit="login()">
 	<label for="userName" >User: </label>
-	<input id="userName" type="text" ng-model="userName"/>
+	<input id="userName" name="userName" type="text" ng-model="userName"/>
 	<label for="passWord">Password: </label>
-	<input id="passWord" type="text" ng-model="passWord"/>
+	<input id="passWord" name="passWord" type="text" ng-model="passWord"/>
 	<input type="submit" value="Login"/>
 	<a ui-sref="register">
 		<button>Register</button>
