--- a/src/main/resources/public/templates/createProject.html
+++ b/src/main/resources/public/templates/createProject.html
@@ -1,4 +1,5 @@
 <form class="form-horizontal">
+
 <div class="form-group">
 	<label for="projectName" class="col-sm-2 control-label">Project: </label>
 	<input id="projectName" name="projectName" type="text" required/>
@@ -23,7 +24,6 @@
 </div>
 </form>
 
-
 <button ng-click=(sendProject())>Create Project</button>
-<p ng-show="worked">Project Created</p>
+<p ng-show="worked">Project has been Created Successfully</p>
 <p ng-show="error">Project failed to create</p>
