--- a/src/main/resources/public/templates/userView.html
+++ b/src/main/resources/public/templates/userView.html
@@ -1,4 +1,4 @@
-<div class="container">
+  <div class="container">
 	<div class="navbar-header">
     	<div class="a navbar-brand">
                Expense Report
@@ -26,3 +26,4 @@
 	<div class="footer">
       	<p translate="footer" class="text-center">2016 Will Wheaties</p>
     </div>
+   </div>
