Fixed logout and changed password input to type:password

--- a/src/main/resources/public/Login/templates/login.html
+++ b/src/main/resources/public/Login/templates/login.html
@@ -6,7 +6,7 @@
 	<label for="userName" >User: </label>
 	<input id="userName" name="userName" type="text" ng-model="userName"/>
 	<label for="passWord">Password: </label>
-	<input id="passWord" name="passWord" type="text" ng-model="passWord"/>
+	<input id="passWord" name="passWord" type="password" ng-model="passWord"/>
 	<input type="submit" value="Login"/>
 	<a ui-sref="register">
 		<button>Register</button>
