--- a/src/main/resources/public/Login/templates/login.html
+++ b/src/main/resources/public/Login/templates/login.html
@@ -1,3 +1,5 @@
+<p ng-show="logout"> You have been successfully logged out. </p>
+
 <form id="loginPage" name="loginPage" ng-submit="login()">
 	<label for="userName" >User: </label>
 	<input id="userName" name="userName" type="text" ng-model="userName"/>
