--- a/src/main/resources/public/Login/templates/login.html
+++ b/src/main/resources/public/Login/templates/login.html
@@ -1,7 +1,9 @@
 <p ng-show="logout"> You have been successfully logged out. </p>
 
+<h2>Welcome to the Expense Report Application</h2>
+<h4>Please Login or Register now</h4>
 <form id="loginPage" name="loginPage" ng-submit="login()">
-	<label for="userName" >User: </label>
+	<label for="userName" id="email" >Email/Username: </label>
 	<input id="userName" name="userName" type="text" ng-model="userName"/>
 	<label for="passWord">Password: </label>
 	<input id="passWord" name="passWord" type="password" ng-model="passWord"/>
