--- a/src/main/resources/public/Login/templates/register.html
+++ b/src/main/resources/public/Login/templates/register.html
@@ -28,9 +28,10 @@
 	<input id="lastName" name="lastName" type="text" ng-model="formData.lastName" required/>
 	<span ng-show="myForm.lastName.$error.required && myForm.lastName.$dirty">Last name is required</span>
 </div>
-	<button ng-disabled="!myForm.$valid" ng-click="sendPost()">Submit</button>
+	<a ui-sref="login">
+		<button ng-disabled="!myForm.$valid" ng-click="sendPost()">Submit</button>
+	</a>
 	<a ui-sref="login">
     	<button>Cancel</button>
 	</a>
-	<button ng-click=(usernameAvailable())>Check</button>
 </form>
