--- a/src/main/resources/public/templates/userView.html
+++ b/src/main/resources/public/templates/userView.html
@@ -7,7 +7,7 @@
     <div class="navbar-collapse collapse" >
     	<ul class="nav navbar-nav">
         	<li>
-            	<a ui-sref="home">Home</a>
+            	<a ui-sref="home.userView">Home</a>
             </li>
             <li>
              	<a ui-sref="home.createReport" ng-show="admin">Create New Report</a>
