--- a/src/main/resources/public/templates/createReport.html
+++ b/src/main/resources/public/templates/createReport.html
@@ -1,5 +1,5 @@
 
-<form class="form-horizontal" role="form" ng-submit="addRow()">
+<form class="form-horizontal" role="form">
 <div class="form-group">
 	<label for="projectName" class="col-sm-2">Project Name: </label>
 	<select id="projectName" name="projectName">
@@ -30,11 +30,12 @@
 </div>
 <div class="form-group">
 	<label for="cost" class="col-sm-2">Cost: </label>
-	<input type="number" step="any" min="0.01" name="cost" ng-model="cost" required/>
+	<input type="number" step="any" min="0.01" name="cost" ng-model="cost" ng-required/>
 </div>
 <div class="form-group">
 	<div>
-		<input type="submit" value="Add Expense Item" class="btn btn-primary"/>
+		<button ng-click="addRow()">Add Expense Item</button>
+<!-- 		<input type="submit" value="Add Expense Item" class="btn btn-primary"/> -->
 	</div>
 </div>
 
