Fixed register issues

--- a/src/main/resources/public/Login/templates/login.html
+++ b/src/main/resources/public/Login/templates/login.html
@@ -1,4 +1,5 @@
-<p ng-show="logout"> You have been successfully logged out. </p>
+<p id="loggedOut" ng-show="logout" class="text-center"> You have been successfully logged out. </p>
+<p id="addedUser" ng-show="register" class="text-center"> Your account has successfully been created. </p>
 
 <h2>Welcome to the Expense Report Application</h2>
 <h4>Please Login or Register now</h4>
