--- a/src/main/resources/public/templates/createProject.html
+++ b/src/main/resources/public/templates/createProject.html
@@ -1,8 +1,8 @@
-<form class="form-horizontal">
+<form name="projectForm" class="form-horizontal">
 
 <div class="form-group">
 	<label for="projectName" class="col-sm-2 control-label textLeft">Project: </label>
-	<input id="projectName" name="projectName" type="text" required/>
+	<input id="projectName" name="projectName" type="text" ng-required/>
 </div>
 <div class="form-group">
 	<label for="techLead" class="col-sm-2 control-label textLeft">Tech Lead: </label>
@@ -24,6 +24,6 @@
 </div>
 </form>
 
-<button ng-click=(sendProject())>Create Project</button>
+<button ng-disabled="!projectForm.valid" ng-click=(sendProject())>Create Project</button>
 <p ng-show="worked">Project has been Created Successfully</p>
 <p ng-show="error">Project failed to create</p>
