--- a/src/main/resources/public/templates/userHomeView.html
+++ b/src/main/resources/public/templates/userHomeView.html
@@ -1,4 +1,4 @@
-<div style="text-align:center"> <!-- update this with stylesheet once merge is ready -->
+<div ng-hide="admin" style="text-align:center"> <!-- update this with stylesheet once merge is ready -->
 
 <div>
 
@@ -49,4 +49,10 @@
       </div>
 	</div>
 
+</div>
+<div ng-show="admin">
+	<h3>Current Projects</h3>
+	<ul>
+		<li ng-repeat="project in allProjects">{{project.name}}</li>
+	</ul>
 </div>
