--- a/src/main/resources/public/templates/adminHomeView.html
+++ b/src/main/resources/public/templates/adminHomeView.html
@@ -1,7 +1,9 @@
 <div style="text-align:center"> <!-- update this with stylesheet once merge is ready -->
 	<h3>Projects:</h3>
-	<div>
- 	 <a ng-click=">{{2+5}}</a>
-	</div>
+	 <div ng-repeat="project in projectList">
+	 
+  
+      <a ng-click="loadView(project.projectId)">{{project.name}}</a>
+      </div>
 
 </div>
