--- a/src/main/resources/public/templates/detailView.html
+++ b/src/main/resources/public/templates/detailView.html
@@ -20,7 +20,7 @@
 </table>
 <div class="form-group">
 	<div>
-		<input type="submit" value="Edit Report" type="btn btn-primary" ui-sref="editReport">
+		<input type="submit" value="Edit Report" type="btn btn-primary" ui-sref="home.editReport">
 	</div>
 </div>
 </div>
