Updated lots of report editing functionality.  put functionality should be operational, just trying to get right info into database

--- a/src/main/resources/public/templates/detailView.html
+++ b/src/main/resources/public/templates/detailView.html
@@ -22,5 +22,11 @@
 	<div>
 		<input type="submit" value="Edit Report" type="btn btn-primary" ui-sref="home.editReport">
 	</div>
+
+    <div>
+      <input type="submit" value="Submit Report" type="btn btn-primary" ng-click="submitx()">
+    </div>
+
+
 </div>
 </div>
