added submit button back

--- a/src/main/resources/public/templates/editReport.html
+++ b/src/main/resources/public/templates/editReport.html
@@ -97,10 +97,10 @@
 	<!--</td>-->
   <!--</tr>-->
 <!--</table>-->
-<!--<div class="form-group">-->
-	<!--<div>-->
-		<!--<input type="submit" value="Save Report" ng-click="sendEditedReport()" class="btn btn-primary"/>-->
-	<!--</div>-->
-<!--</div>-->
-<!--<p ng-show="error">Report failed to create</p>-->
+<div class="form-group">
+	<div>
+		<input type="submit" value="Save Report" ng-click="sendEditedReport()" class="btn btn-primary"/>
+	</div>
+</div>
+<p ng-show="error">Report failed to create</p>
 <!--</div>-->
