--- a/src/main/resources/public/templates/detailView.html
+++ b/src/main/resources/public/templates/detailView.html
@@ -4,23 +4,25 @@
 <form class="form-horizontal">
 
   <div class="form-group">
-	<label for="reportName" class="col-sm-2 control-label textLeft">Name: </label>
+	<label for="reportName" class="col-sm-3 control-label textLeft">Name: </label>
 	<input  name="reportName" type="text" ng-value="reportToView.name" onfocus="this.blur();"/>
 </div>
    
  <div class="form-group">
-	<label for="Notes" class="col-sm-2 control-label textLeft">Notes: </label>
+	<label for="Notes" class="col-sm-3 control-label textLeft">Notes: </label>
 	<textarea ng-value="reportToView.name" onfocus="this.blur();"/>{{reportToView.note}}</textarea>
 </div>
-   
-  <div class="form-group" ng-repeat="lineItem in reportToView.lineItems">
-	<label for="ExpenseType" class="col-sm-2 control-label textLeft">Expense Type: </label>
-	<input  name="ExpenseType" type="text" ng-value="lineItem.type.type" onfocus="this.blur();"/>
-</div>
-  
-    <div class="form-group" ng-repeat="lineItem in reportToView.lineItems">
-	<label for="ExpenseAmount" class="col-sm-2 control-label textLeft">Expense Amount: </label>
-	<input  name="ExpenseAmount" type="text" ng-value="lineItem.value | currency" onfocus="this.blur();"/>
+
+<div ng-repeat="lineItem in reportToView.lineItems">   
+	<div class="form-group">
+		<label for="ExpenseType" class="col-sm-3 control-label textLeft">Expense Type: </label>
+		<input  name="ExpenseType" type="text" ng-value="lineItem.type.type" onfocus="this.blur();"/>
+	</div>
+	  
+	<div class="form-group">
+		<label for="ExpenseAmount" class="col-sm-3 control-label textLeft">Expense Amount: </label>
+		<input  name="ExpenseAmount" type="text" ng-value="lineItem.value | currency" onfocus="this.blur();"/>
+	</div>
 </div>
 </form>
     
