--- a/src/main/resources/public/templates/userView.html
+++ b/src/main/resources/public/templates/userView.html
@@ -7,7 +7,7 @@
     <div class="navbar-collapse collapse" ng-controller="navigationController">
     	<ul class="nav navbar-nav">
         	<li>
-            	<a ui-sref="home.userView" ng-show="!admin">Home</a>
+            	<a ui-sref="home.userView">Home</a>
             	</li>
             
                 <li>
