--- a/src/main/resources/public/Login/templates/register.html
+++ b/src/main/resources/public/Login/templates/register.html
@@ -29,7 +29,5 @@
 	<span ng-show="myForm.lastName.$error.required && myForm.lastName.$dirty">Last name is required</span>
 </div>
 	<button ng-disabled="!myForm.$valid" ng-click="sendPost()">Submit</button>
-	<a ui-sref="login">
-    	<button>Cancel</button>
-	</a>
+    <button ng-click = "cancel()">Cancel</button>
 </form>
