Everything works except live update on frontend, and editing of existing lineitems

--- a/src/main/resources/public/templates/editReport.html
+++ b/src/main/resources/public/templates/editReport.html
@@ -65,7 +65,7 @@
 			</td>
 
 			<td>
-				{{lineItem.value | currency}}
+				<input type="text" ng-value="lineItem.value | currency" >
 			</td>
 			<td>
 				<a class="btn" ng-click="removeItem(items)">Remove</button>
